--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6357,7 +6357,7 @@ div#mCSB_1_container{
 .order-now-btn {
     position: relative;
     padding: 18px 50px;
-    background: linear-gradient(135deg, #ff4d4d 0%, #f9cb28 100%);
+    background: linear-gradient(135deg, #ffb24d 0%, #f9cb28 100%);
     color: #fff;
     border: none;
     border-radius: 50px;
@@ -6398,7 +6398,7 @@ div#mCSB_1_container{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(135deg, #f9cb28 0%, #ff4d4d 100%);
+    background: linear-gradient(135deg, #f9cb28 0%, #ffb84d 100%);
     z-index: -1;
     opacity: 0;
     transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
@@ -6819,7 +6819,7 @@ div#mCSB_1_container{
     right: 5%;
     font-family: Arial, Helvetica, sans-serif !important;
     padding: 16px 40px;
-    background-color: rgb(183, 54, 4);
+    background-color: rgb(255, 186, 81);
     color: #000 !important;
     font-weight: 700;
     font-size: 18px;
@@ -6878,7 +6878,7 @@ div#mCSB_1_container{
 /* Hiệu ứng hover - KHÔNG LÀM MẤT ANIMATION GỐC */
 .order-now-btn:hover {
     background-color: #000;
-    color: rgb(183, 54, 4) !important;
+    color: rgb(183, 100, 4) !important;
     transform: translateY(-3px) scale(1.05);
     /* Thêm !important để đè lên animation */
     box-shadow: 12px 12px 0 rgb(183, 54, 4),
